<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osrf_pycommon</name>
  <version>1.0.0</version>
  <description>Commonly needed Python modules, used by Python software developed at OSRF.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <exec_depend>python3-mock</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
