<?xml version="1.0"?>
<package format="2">
  <name>rqt_action</name>
  <version>1.0.1</version>
  <description>rqt_action provides a feature to introspect all available ROS
  action types. By utilizing rqt_msg, the output format is
  unified with it and rqt_srv. Note that the actions shown on this plugin
  is the ones that are stored on your machine, not on the ROS core your rqt
  instance connects to.</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
  <maintainer email="geoffrey.biggs@aist.go.jp">Geoffrey Biggs</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_action</url>
  <url type="repository">https://github.com/ros-visualization/rqt_action</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_action/issues</url>

  <author>Isaac Isao Saito</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_msg</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
