<package format="3">
  <name>rqt_service_caller</name>
  <version>1.0.5</version>
  <description>rqt_service_caller provides a GUI plugin for calling arbitrary services.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="mikeblautman@gmail.com">Mike Lautman</maintainer>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_service_caller</url>
  <url type="repository">https://github.com/ros-visualization/rqt_service_caller</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_service_caller/issues</url>

  <author>Dorian Scholz</author>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
