<package format="2">
  <name>rqt_srv</name>
  <version>1.0.3</version>
  <description>A Python GUI plugin for introspecting available ROS message types.
  Note that the srvs available through this plugin is the ones that are stored
  on your machine, not on the ROS core your rqt instance connects to.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
  <maintainer email="mikeblautman@gmail.com">Michael Lautman</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_srv</url>
  <url type="repository">https://github.com/ros-visualization/rqt_srv</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_srv/issues</url>

  <author>Aaron Blasdel</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_msg</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
