<?xml version="1.0"?>
<package format="2">
  <name>rqt_top</name>
  <version>1.0.2</version>
  <description>RQT plugin for monitoring ROS processes.</description>

  <author email="dan@lazewatsky.com">Dan Lazewatsky</author>
  <maintainer email="dan@lazewatsky.com">Dan Lazewatsky</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_top</url>
  <url type="repository">https://github.com/ros-visualization/rqt_top</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_top/issues</url>

  <exec_depend>python3-psutil</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
