<?xml version="1.0"?>
<package format="2">
  <name>class_loader</name>
  <version>1.4.1</version>
  <description>
    The class_loader package is a ROS-independent package for loading plugins during runtime and the foundation of the higher level ROS "pluginlib" library.
    class_loader utilizes the host operating system's runtime loader to open runtime libraries (e.g. .so/.dll files), introspect the library for exported plugin classes, and allows users to instantiate objects of these exported classes without the explicit declaration (i.e. header file) for those classes.
  </description>
  <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/class_loader</url>
  <author>Mirza Shah</author>
  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>console_bridge_vendor</build_depend>
  <build_depend>libconsole-bridge-dev</build_depend>
  <build_depend>libpoco-dev</build_depend>
  <build_depend>poco_vendor</build_depend>

  <exec_depend>console_bridge_vendor</exec_depend>
  <exec_depend>libconsole-bridge-dev</exec_depend>
  <exec_depend>libpoco-dev</exec_depend>
  <exec_depend>poco_vendor</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
